daft-derive/tests/fixtures/invalid/struct-attribute-with-value.stderr
error: expected `,`
 --> tests/fixtures/invalid/struct-attribute-with-value.rs:4:13
  |
4 | #[daft(leaf = true)]
  |             ^
